# Matrix_Calculator

./: .gitlab-ci.yml  CMakeLists.txt  README.md  matrix_calculator.pro  structure.txt  实验报告.md
.github/workflows/: windows-build.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: main.cpp
src/core/: Entry.cpp  Entry.h  EntryPolynomial.cpp  EntryPolynomial.h  ErrorHandler.h  Matrix.cpp  Matrix.h
src/ui/: BoardWidget.cpp  BoardWidget.h  MainWindow.cpp  MainWindow.h  OperationWidget.cpp  OperationWidget.h
